# filedataclasses

./: README.md  setup.cfg
filedataclasses/: __init__.py  file.py  json.py  toml.py  yaml.py
