[metadata]
name = filedataclasses
version = 0.1.0
author = Alon Krymgand Osovsky
author_email = downtown2u@gmail.com
description = "Automatically load and dump your dataclasses 📂🙋"
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/RealA10N/filedataclasses
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
