[metadata]
name = filedataclasses
version = 0.1.0
author = Alon Krymgand Osovsky
author_email = downtown2u@gmail.com
description = "Automatically load and dump your dataclasses 📂🙋"
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/RealA10N/filedataclasses
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
packages = find:

[options.extras_require]
toml = toml>=0.10, <1
yaml = pyyaml>=6.0, <7
all = toml>=0.10, <1; pyyaml>=6.0, <7
